--- a/client/src/style.css
+++ b/client/src/style.css
@@ -38,6 +38,7 @@ body {
 }
 
 .candidatos h3 {
+  margin-left: 10px;
   display: block;
   font-size: 200%;
   color: lightyellow;
@@ -46,11 +47,18 @@ body {
 .candidato{
   border: 5px solid black;
   border-radius: 10px;
-  margin: 20px;
+  margin: 0 20px;
+  background-color: #30313b;
 
   flex: 1;
   display: flex;
   flex-direction: column;
+}
+
+.aviso{
+  border: 1px solid black;
+  display: inline-block;
+  background-color: #30313b;
 }
 
 /* Página do candidato */
